--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
+  padding: 8px 10px;
   margin-top: 20px;
   background: #fff;
 }
